[gd_scene load_steps=9 format=3 uid="uid://bbvs063x15p7k"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_t3jsa"]
[ext_resource type="PackedScene" uid="uid://dess5jlqdehgt" path="res://Scenes/tanjiro's katana.fbx" id="2_bto3e"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_itgpm"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_0wnvl"]
points = PackedVector3Array(-0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5)

[sub_resource type="Animation" id="Animation_hfbq5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerCamera/WeaponPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerCamera/WeaponPivot/tanjiro\'s katana:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 4.61993e-08)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerCamera/WeaponPivot/tanjiro\'s katana:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.743082, -0.292382, -0.184596)]
}

[sub_resource type="Animation" id="Animation_bp3gr"]
resource_name = "attack"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerCamera/WeaponPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 2.58244, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerCamera/WeaponPivot/tanjiro\'s katana:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.473617, -0.292382, 0.0500193)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerCamera/WeaponPivot/tanjiro\'s katana:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.173486, 0.252462, -1.42308)]
}

[sub_resource type="Animation" id="Animation_1nytf"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerCamera/WeaponPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerCamera/WeaponPivot/tanjiro\'s katana:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0, 0, 0.0470541), Vector3(0, 0, 0.107338)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerCamera/WeaponPivot/tanjiro\'s katana:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.505135, -0.81681, -0.601035)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6o8mf"]
_data = {
"RESET": SubResource("Animation_hfbq5"),
"attack": SubResource("Animation_bp3gr"),
"idle": SubResource("Animation_1nytf")
}

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_t3jsa")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_itgpm")

[node name="PlayerCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.59022, 0)

[node name="WeaponPivot" type="Node3D" parent="PlayerCamera"]

[node name="tanjiro\'s katana" parent="PlayerCamera/WeaponPivot" instance=ExtResource("2_bto3e")]
transform = Transform3D(0.100794, -7.39129e-09, 0, 4.65661e-09, 0.159987, 0, 0, 0, 0.101, 0.743082, -0.292382, -0.184596)

[node name="Light" parent="PlayerCamera/WeaponPivot/tanjiro\'s katana" index="1"]
visible = false

[node name="Camera" parent="PlayerCamera/WeaponPivot/tanjiro\'s katana" index="2"]
visible = false

[node name="Sun" parent="PlayerCamera/WeaponPivot/tanjiro\'s katana" index="21"]
visible = false

[node name="Sun_001" parent="PlayerCamera/WeaponPivot/tanjiro\'s katana" index="22"]
visible = false

[node name="Hitbox" type="Area3D" parent="PlayerCamera/WeaponPivot/tanjiro\'s katana"]
transform = Transform3D(1.09991, -0.543509, 0, 0.0872343, 6.85294, 0, 0, 0, 1.08911, -0.107296, 2.06291, -0.00867367)
collision_layer = 0
collision_mask = 4
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerCamera/WeaponPivot/tanjiro\'s katana/Hitbox"]
transform = Transform3D(1.04899, 0.00673407, 0, -0.00422997, 1.66999, 0, 0, 0, 1, 0.453845, 0.373375, -0.0837529)
shape = SubResource("ConvexPolygonShape3D_0wnvl")

[node name="animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6o8mf")
}
autoplay = "idle"
playback_default_blend_time = 0.1

[connection signal="body_entered" from="PlayerCamera/WeaponPivot/tanjiro\'s katana/Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="animation_finished" from="animation" to="." method="_on_animation_animation_finished"]

[editable path="PlayerCamera/WeaponPivot/tanjiro\'s katana"]
